added updating the football score
